Issue #78: Rework how the page gets wrapped.
Fixes #78.

--- a/styles/base/_layers.scss
+++ b/styles/base/_layers.scss
@@ -59,3 +59,13 @@
     margin-top: 0;
   }
 }
+
+.gin-layer-wrapper {
+  &:has(> .view),
+  &:has(> .admin-list) {
+    border: none;
+    padding: 0;
+    background: none;
+    box-shadow: none;
+  }
+}
